# ai-agent-builder

./: .env.example  .env.example.prod  .gitignore  .mcp.json  CLAUDE.md  DEVELOPMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml
apps/backend/: .env.example  .gitignore  =2.0  Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 1d745494df26_add_kb_retrieval_mode_to_agents.py  59a034566727_add_files_table.py  76f3806bcd90_init_schema.py  a6q9r2m5n8o0_parent_child_chunks.py  a72f5e1c8d44_agent_share_token.py  aa3e95f0839a_make_embedding_column_flexible_dimension.py  af718cbf181f_payment_provider_configs.py  b1c4e2d8a5f7_workflow_run_is_partial.py  b1f7c4a9d2e6_workspace_quota_overrides.py  b7r0s3n6o9p1_kb_connectors.py  c1d85c00873e_initial_tables.py  c2d5f3e9b6a8_workflow_webhook_token.py  c2g8d5b0e3f7_stripe_webhook_events.py  c8s1t4o7p0q2_usage_events.py  d3f7b2c4e5a9_marketplace_hub.py  d3h0e6c1f4a8_usage_events_index.py  d9t2u5p1q3r4_org_subscriptions.py  db924f2d3626_initial_schema.py  e0u3v6q2r4s5_workflow_webhook_secret.py  e4a8c1f5d2b6_template_reviews.py  e4i1f7d2g5b9_metered_cursor_composite.py  e8a2c1f4b673_document_processing_phase.py  f1v4w7r3s5t6_email_triggers.py  f3a91d4c2b58_personal_access_tokens.py  f5b9e3a7c1d4_user_role_admin_audit.py  f5j2g8e3h6c0_backfill_org_members.py  g2w5x8s4t6u7_slack_triggers.py  g6c8d4f2e9a1_stripe_connect.py  h3x6y9t5u7v8_teams_discord_triggers.py  h7d9e5a3b2c8_payment_provider_generalize.py  i4y7z0u6v8w9_notifications.py  i8e0f6b4d3c9_purchase_settled.py  j5z8a1v7w9x0_message_annotations.py  j9f1a7c5e2d0_user_pending_email.py  k0a2b8d6f4e1_user_momo_credentials.py  k6a9b2w8x0y1_plugins.py  l1b3c9e7d5f2_template_kb_content.py  l7b0c3x9y1z2_oauth_connections.py  m2c4d8e1f3a5_organizations_workspaces.py  m8c1d4y0z2a3_unified_triggers.py  (+15 more)
apps/backend/app/: config.py  context.py  dispatcher_client.py  main.py  rate_limit.py
apps/backend/app/admin/: __init__.py  jobs.py  router.py  schemas.py  service.py
apps/backend/app/agents/: attachments.py  executor.py  router.py  schemas.py  service.py
apps/backend/app/ai_credentials/: router.py  schemas.py  service.py
apps/backend/app/annotations/: __init__.py  router.py  service.py
apps/backend/app/api_keys/: router.py  schemas.py  service.py
apps/backend/app/audit/: purge.py  router.py  service.py
apps/backend/app/auth/: dependencies.py  emails.py  oauth.py  oauth_router.py  permissions.py  router.py  schemas.py  service.py  tokens.py
apps/backend/app/background/: __init__.py  audit_purge.py  billing_reporter.py  email_poll.py  kb_sync.py  scheduled_triggers.py
apps/backend/app/billing/: __init__.py  plans.py  quota.py  router.py  schemas.py  service.py  stripe_client.py  usage_reporter.py  webhooks.py
apps/backend/app/cli/: __init__.py  _starter_templates.py  backfill_tenancy.py  seed_admin.py  seed_starter_templates.py
apps/backend/app/conversations/: router.py  schemas.py  service.py  sse.py  ws.py
apps/backend/app/core/: __init__.py  ingestion.py  retrieval.py  workflow_runner.py
apps/backend/app/dashboard/: __init__.py  router.py  service.py
apps/backend/app/db/: base.py  session.py
apps/backend/app/discord_triggers/: router.py  service.py
apps/backend/app/email_triggers/: __init__.py  router.py  scheduler.py  service.py
apps/backend/app/extractors/: __init__.py  base.py  pdf.py  pptx.py  registry.py
apps/backend/app/hub/: payment.py  reviews.py  router.py  schemas.py  service.py  snapshot.py  webhook_router.py
apps/backend/app/integrations/: mcp.py  router.py
apps/backend/app/internal/: guard.py  knowledge.py  router.py  workflows.py
apps/backend/app/jobs/: idempotency.py  producer.py  router.py  service.py  types.py
apps/backend/app/knowledge/: embeddings.py  ingestion.py  retriever.py  router.py  schemas.py  service.py
apps/backend/app/llm/: __init__.py  catalog.py  provider.py  router.py
apps/backend/app/mfa/: router.py  service.py
apps/backend/app/models/: __init__.py  admin_action.py  agent.py  agent_template.py  agent_template_kb.py  agent_template_purchase.py  agent_template_review.py  agent_template_version.py  ai_credential.py  api_key.py  audit_log.py  auth_token.py  conversation.py  custom_role.py  discord_trigger.py  document.py  document_chunk.py  email_trigger.py  file.py  job.py  kb_connector.py  knowledge_base.py  message.py  message_annotation.py  notification.py  oauth_account.py  oauth_connection.py  org_subscription.py  organization.py  organization_member.py  payment_provider_config.py  personal_access_token.py  plugin.py  scheduled_trigger.py  scim_token.py  slack_trigger.py  sso_configuration.py  stripe_webhook_event.py  teams_trigger.py  tool.py  (+11 more)
apps/backend/app/modules/: __init__.py
apps/backend/app/multi_agent/: __init__.py  peer.py  router.py  supervisor.py
apps/backend/app/notifications/: inbox.py  router.py  schemas.py  service.py
apps/backend/app/oauth_connectors/: __init__.py  providers.py  router.py  service.py
apps/backend/app/observability/: __init__.py  health.py  logging.py  metrics.py  sentry.py  tracing.py
apps/backend/app/payments/: __init__.py  base.py  service.py
apps/backend/app/payouts/: __init__.py  router.py  service.py
apps/backend/app/permissions/: catalogue.py  roles.py  router.py  service.py
apps/backend/app/personal_tokens/: router.py  schemas.py  service.py
apps/backend/app/platform/: __init__.py  config.py  context.py  dispatcher_client.py  rate_limit.py
apps/backend/app/plugins/: manifest.py  router.py  service.py
apps/backend/app/scheduled_triggers/: scheduler.py  service.py
apps/backend/app/schemas/: __init__.py  base.py
apps/backend/app/scim/: auth.py  router.py
apps/backend/app/security/: __init__.py  crypto.py
apps/backend/app/share/: router.py  service.py
apps/backend/app/slack_triggers/: router.py  schemas.py  service.py  signing.py
apps/backend/tests/: conftest.py  test_events_bus.py  test_expression.py  test_node_io.py  test_permissions.py  test_url_guard.py
(+1150 files in other folders)
