[project]
name = "lc-agent-backend"
version = "0.1.0"
description = "AI Agent Builder - Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.12",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-community>=0.3",
    "langchain-ollama>=0.3",
    "langgraph>=0.2",
    "langchain-text-splitters>=0.3",
    "pgvector>=0.3",
    "httpx>=0.27",
    "pypdf>=4.0",
    "docx2txt>=0.8",
    "pydantic[email]>=2.0",
    "simpleeval>=1.0",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "beautifulsoup4>=4.12",
    "redis[hiredis]>=5.0",
    "stripe>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I"]
# E501 line-too-long: pure style, no formatter wired up yet — leave to reviewers.
# E402 module-import-not-at-top: several files use late imports to break circular cycles.
ignore = ["E501", "E402"]

[tool.ruff.lint.per-file-ignores]
# F821 in models: SQLAlchemy `Mapped["X"]` forward references are strings that
# resolve at mapper-configure time. Ruff can't statically verify them.
"app/models/*" = ["F821"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-v", "--strict-markers", "--tb=short"]
markers = [
    "integration: tests that need a running Postgres (opt-in via -m integration)",
]
filterwarnings = [
    "ignore::DeprecationWarning:passlib",
    "ignore::DeprecationWarning:pydantic",
]
