[project]
name = "lc-agent-backend"
version = "0.1.0"
description = "AI Agent Builder - Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt==4.0.1",
    "python-multipart>=0.0.12",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-community>=0.3",
    "langchain-ollama>=0.3",
    # AWS Bedrock provider (P3.2). Pulls boto3 transitively — the
    # AWS credential chain (env / ~/.aws / instance role) resolves
    # at LLM-build time. Pin a recent enough version for ChatBedrock
    # with tool-use support.
    "langchain-aws>=0.2",
    # Cloud-storage SDKs for KB connectors. Lazy-imported so
    # tenants who don't use these providers pay no cold-start cost.
    "google-cloud-storage>=2.10",
    "google-api-python-client>=2.100",
    "azure-storage-blob>=12.20",
    "azure-identity>=1.17",
    "langgraph>=0.2",
    "langchain-text-splitters>=0.3",
    "pgvector>=0.3",
    "httpx>=0.27",
    "pypdf>=4.0",
    "docx2txt>=0.8",
    "pydantic[email]>=2.0",
    "simpleeval>=1.0",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "beautifulsoup4>=4.12",
    "redis[hiredis]>=5.0",
    "stripe>=11.0",
    "sentry-sdk[fastapi]>=2.0",
    # Cron expression parser for the workflow scheduled-trigger node.
    # Lightweight, no native deps — pure Python.
    "croniter>=2.0",
    # YAML loader for plugin manifests (P3.1). Already pulled in
    # transitively by langchain but declared explicitly so
    # ``app.plugins.manifest`` has a stable contract.
    "pyyaml>=6.0",
    # TOTP for MFA. Pure Python, no native deps. Authenticator apps
    # (Google Authenticator, 1Password, Authy) all speak this format.
    "pyotp>=2.9",
    # Prometheus metric registry + ``/metrics`` text exposition.
    # Pure Python, no native deps. Used by app.observability.metrics.
    "prometheus-client>=0.20",
    # OpenTelemetry SDK + OTLP exporter + auto-instrumentation for
    # FastAPI, SQLAlchemy, Redis, httpx. Tracing is OFF by default —
    # wakes up when OTEL_EXPORTER_OTLP_ENDPOINT is set.
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    # Integration test infrastructure (opt-in via -m integration).
    # testcontainers spins up a real Postgres+pgvector for migration / DB
    # tests so we don't ship migrations that only pass on SQLite.
    "testcontainers[postgres]>=4.8",
    "factory-boy>=3.3",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I"]
# E501 line-too-long: pure style, no formatter wired up yet — leave to reviewers.
# E402 module-import-not-at-top: several files use late imports to break circular cycles.
ignore = ["E501", "E402"]

[tool.ruff.lint.per-file-ignores]
# F821 in models: SQLAlchemy `Mapped["X"]` forward references are strings that
# resolve at mapper-configure time. Ruff can't statically verify them.
"app/models/*" = ["F821"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-v", "--strict-markers", "--tb=short"]
markers = [
    "integration: tests that need a running Postgres (opt-in via -m integration)",
]
filterwarnings = [
    "ignore::DeprecationWarning:passlib",
    "ignore::DeprecationWarning:pydantic",
]
